Fix fonts / Add button container class for center aligning

--- a/static/style.css
+++ b/static/style.css
@@ -1,21 +1,73 @@
 :root{ --cols: 10; }
 
 @font-face {
-    font-family: 'GMarketSans';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansLight.woff') format('woff');
+    font-family: "GMarketSansBold";
+    src: url(fonts/GmarketSansTTFBold.ttf) format('truetype');
+    font-weight: bold;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "GmMrketSansMedium";
+    src: url(fonts/GmarketSansTTFMedium.ttf) format('truetype');
+    font-weight: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "GMarketSansLight";
+    src: url(fonts/GmarketSansTTFLight.ttf) format('truetype');
     font-weight: 300;
     font-display: swap;
 }
 
 body {
-    font-family: "GMarketSans", sans-serif;
+    font-family: "GMarketSansLight", sans-serif;
+    background-color: #2e2e2e;
+    color: white;
+    text-align: center;
 }
 
-main {padding:20px;}
+.button-container {
+    padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
+    overflow: hidden;
+    gap: 24px;
+}
+
+button {
+    font-family: "GMarketSansMedium", sans-serif;
+    font-size: 150%;
+    border-style: solid;
+    border-radius: 15px;
+    border-width: 3px;
+    border-color: white;
+    background-color: #2e2e2e;
+    color: white;
+    min-width: 18vw;
+    height: 70px;
+    cursor: pointer;
+}
+
+@media (max-width: 600px) {
+    button {
+        font-size: 120%;
+        min-width: 80%;
+    }
+}
+
 .grid {
     display: grid;
     grid-template-columns: repeat(var(--cols), 1fr);
     gap: 10px;
+    width: auto;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
 }
 
 .cell {
